test/functions/intents/out/ambiguous-out-intent1.good
ambiguous-out-intent1.chpl:10: error: ambiguous call 'foo(int(64))'
ambiguous-out-intent1.chpl:1: note: candidates are: foo(out a: int)
ambiguous-out-intent1.chpl:5: note:                 foo(out a: uint)
